--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "file-loader": "^0.7.2"
   },
   "scripts": {
-    "prepublish": "./node_modules/react-tools/bin/jsx --harmony --no-cache-dir src lib",
+    "build": "jsx --harmony --no-cache-dir src lib",
     "start": "cd example && webpack-dev-server --progress --colors --hot --inline",
     "test": "jest"
   },
