--- a/package.json
+++ b/package.json
@@ -25,21 +25,22 @@
     "react": ">=0.12"
   },
   "devDependencies": {
+    "bootstrap": "^3.2.0",
     "css-loader": "^0.7.1",
     "d3": "^3.4.11",
+    "file-loader": "^0.7.2",
     "flux": "^2.0.1",
+    "font-awesome": "^4.2.0",
     "jest-cli": "^0.2.1",
     "jsx-loader": "^0.12.2",
-    "react-tools": "^0.12.2",
-    "style-loader": "^0.7.1",
-    "webpack": "^1.4.15",
-    "webpack-dev-server": "^1.6.6",
-    "bootstrap": "^3.2.0",
-    "font-awesome": "^4.2.0",
     "less": "^1.7.5",
     "less-loader": "^0.7.7",
+    "react-addons-pure-render-mixin": "^0.14.7",
+    "react-tools": "^0.12.2",
+    "style-loader": "^0.7.1",
     "url-loader": "^0.5.5",
-    "file-loader": "^0.7.2"
+    "webpack": "^1.4.15",
+    "webpack-dev-server": "^1.6.6"
   },
   "scripts": {
     "transform": "jsx --harmony --no-cache-dir src lib",
