--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-data-components",
+  "name": "@sstur/react-data-components",
   "version": "0.1.7",
   "description": "React data components",
   "keywords": [
@@ -19,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/carlosrocha/react-data-components"
+    "url": "https://github.com/sstur/react-data-components"
   },
   "peerDependencies": {
     "react": "^0.12.2"
