--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "url": "https://github.com/sstur/react-data-components"
   },
   "peerDependencies": {
-    "react": "^0.12.2"
+    "react": ">=0.12"
   },
   "devDependencies": {
     "bootstrap": "^3.2.0",
